--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 */logs/!index.html
 */cache/*
 */cache/!index.html
-/application/config/database.php
-/application/config/config.php
-/application/logs/*
+application/config/database.php
+application/config/config.php
+application/logs/*
